<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashpage"
    android:padding="12dp"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/im_dicoding_login"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:src="@drawable/image_dicoding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textColor="@color/pale_green"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_dicoding_login" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login"/>

    <com.rohim.stroyapplast.ui.customview.EdtEmail
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:alpha="0"
        android:paddingStart="12dp"
        android:background="@drawable/bg_edt2"
        android:textColorHint="#D3D3D3"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium_italic"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/password"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="22sp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login"/>

    <com.rohim.stroyapplast.ui.customview.EdtPassword
        android:id="@+id/edt_pass_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:alpha="0"
        android:paddingStart="12dp"
        android:background="@drawable/bg_edt2"
        android:textColorHint="#D3D3D3"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:alpha="0"
        android:background="@drawable/bg_btn1"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_pass_login" />
    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudah punya akun?"
            android:textSize="18sp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="@color/pale_green"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rohim Kurniawan"
        android:textColor="#D3D3D3"
        android:fontFamily="@font/roboto_medium_italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>